Scrollbar vis fix.

--- a/app/styles/normalize.scss
+++ b/app/styles/normalize.scss
@@ -4,7 +4,19 @@
   padding: 0;
   word-wrap: break-word;
 }
-// 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: transparent;
+}
+//
 // html {
 //   max-height: 100vh;
 // }
